# tun2socks

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  tun2socks.sln
allocator/: allocator.hpp
connector/: connector.cpp  connector.h  connector_table.hpp
core/: config.h  core.cpp  core.h
error/: error_code.h
pool/: pool.hpp
socks5/: socks5.h  socks5_auth.h  socks5_client.cpp  socks5_client.h
tests/: main.go
tun2socks-cli/: CMakeLists.txt  tun2socks-cli.cpp  tun2socks-cli.vcxproj  tun2socks-cli.vcxproj.filters
tun2socks-core/: CMakeLists.txt  dllmain.cpp  socks5.cpp  tun2socks-core.cpp  tun2socks-core.vcxproj  tun2socks-core.vcxproj.filters  tuntap-linux.cpp  tuntap-windows.cpp
tun2socks-core/include/: lwipstack.h  socks5.h  socks5_auth.h  tun2socks.h  tuntap.h
tun2socks-core/lwip/src/: sys_arch.c  sys_arch_linux.cpp
tun2socks-core/lwip/src/core/: tcp.c  tcp_in.c  tcp_out.c  udp.c
tun2socks-core/lwip/src/core/ipv4/: ip4.c
tun2socks-core/lwip/src/include/arch/: sys_arch.h
tun2socks-core/lwip/src/include/lwip/: lwipopts.h  tcp.h
tun2socks-core/tests/: lwip_test.cpp
tuntap/: tap-windows.h  tuntap.cpp  tuntap.h  tuntapimpl_linux.cpp  tuntapimpl_linux.h
wrapper/: lwip.hpp  pbuf.hpp
